Fix home link rss button focus being way too wide

--- a/style/page/blog.scss
+++ b/style/page/blog.scss
@@ -27,7 +27,7 @@
 			height: 100%;
 		}
 		
-		&:hover::before {
+		&:hover::before, &:focus::before {
 			width: 100%;
 		}
 	}
